--- a/src/App.css
+++ b/src/App.css
@@ -7,11 +7,6 @@
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
 .App-header {
   background-color: #282c34;
@@ -26,6 +21,12 @@
 
 .App-link {
   color: #61dafb;
+}
+
+
+.comic-feature{
+max-width: 40%;
+max-height:40%;
 }
 
 @keyframes App-logo-spin {
