--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
 }
 
 
-.App-header {
+.App-main {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -30,6 +30,16 @@ max-height:40%;
 margin-top: 20px;
 
 }
+
+.nav-holder{
+  display: flex;
+  justify-content: space-between;
+}
+.link-button{
+  margin: 20px;
+}
+
+
 
 @keyframes App-logo-spin {
   from {
