--- a/src/App.css
+++ b/src/App.css
@@ -2,25 +2,12 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-
-.App-main {
+.App-header{
   background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  min-height: 10vh;
+  font-size: calc(20px + 2vmin);
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
 }
 
 
@@ -35,8 +22,12 @@ margin-top: 20px;
   display: flex;
   justify-content: space-between;
 }
-.link-button{
-  margin: 20px;
+
+.navigation-container{
+ width: 100vw;
+ display: flex;
+ flex-direction: row;
+ justify-content: space-evenly;
 }
 
 
