--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
 .App-header{
   background-color: #282c34;
   min-height: 10vh;
-  font-size: calc(10px + 2vmin);
+  font-size: 10px;
   color: white;
 }
 
