--- a/src/App.css
+++ b/src/App.css
@@ -56,7 +56,9 @@ a{
 }
 .comic-feature{
   max-width: 80%;
-  margin-top: 10px;
+  margin-top: 5vh;
+  border: rgb(255, 255, 255, .9) solid 2px;
+
   
   }
 
