--- a/src/App.css
+++ b/src/App.css
@@ -59,7 +59,18 @@ a{
   
   }
 
+.instagram-logo{
+  height: 30px;
+  width: 30px;
+}
 
+.email-link{
+  color: black;
+  border: solid black 2px;
+  border-radius: 15%;
+  padding: 5px;
+  margin-right: 20px;
+}
   
 
 @keyframes App-logo-spin {
