decent styling for contact links

--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,6 @@
 }
 
 
-
 .navigation-container{
  width: 100vw;
  display: flex;
@@ -55,23 +54,28 @@ a{
   max-width: 80%;
   margin-top: 5vh;
   border: rgb(255, 255, 255, .9) solid 2px;
-
-  
   }
 
 .instagram-logo{
   height: 30px;
   width: 30px;
+ margin-left: 120px;
 }
 
 .email-link{
   color: black;
   border: solid black 2px;
-  border-radius: 15%;
+  border-radius: 5%;
   padding: 5px;
-  margin-right: 20px;
+ 
 }
   
+.link-container{
+  margin-top: 30vh;
+  border: red 1px solid;
+  display: flex;
+  justify-content: center;
+}
 
 @keyframes App-logo-spin {
   from {
