--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,7 @@ padding-bottom: 10vh;
 
 
 
+
 .page-component{
   background-color: #282c34; 
   height: 100vh;
@@ -83,6 +84,11 @@ a{
   justify-content: center;
 }
 
+
+.about-summary{
+  color: white;
+
+}
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
