--- a/src/App.css
+++ b/src/App.css
@@ -33,10 +33,16 @@ padding-bottom: 10vh;
   background-color: #282c34; 
   height: 100vh;
 
+
 }
 
 .homepage-component{
 background-color: #282c34;
+}
+
+.contact-component{
+  display: flex;
+  justify-content: center;
 }
 
 .section-title{
@@ -79,9 +85,10 @@ a{
   
 .link-container{
   margin-top: 30vh;
-  border: red 1px solid;
+
   display: flex;
   justify-content: center;
+  width: 40vw;
 }
 
 
