font family for nav elements

--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,8 @@
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
-
+ font-family: 'Bebas Neue', cursive;
+ font-size: larger;
  padding-top: 10px;
 padding-bottom: 10vh;
 }
