--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@
 }
 
 #header-logo{
-  max-width: 40%;
+  max-width: 50%;
 }
 
 
@@ -67,8 +67,7 @@ a{
   }
 
 .instagram-logo{
-  height: 30px;
-  width: 30px;
+  width: 20vw;
  margin-left: 120px;
 }
 
