--- a/src/App.css
+++ b/src/App.css
@@ -80,6 +80,8 @@ a{
   padding: 5px;
  font-family: 'Bebas Neue', cursive ;
  width: 50vw;
+ display: flex;
+ align-items: center;
 }
   
 .link-container{
