--- a/src/App.css
+++ b/src/App.css
@@ -75,7 +75,8 @@ a{
 
 #email-link{
   color: white;
-  border: solid  #fede4a 2px;
+  border: solid  2px; 
+  
   border-radius: 5%;
   padding: 5px;
  font-family: 'Bebas Neue', cursive ;
