--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,7 @@
 
 #header-logo{
   max-width: 50%;
+  animation: logoshake 2s linear infinite normal;
 }
 
 
@@ -65,7 +66,7 @@ background-color: #282c34;
 
 #meet-the-comics{
   color: white;
-  margin-top: 30vh
+  margin-top: 30vh;
 }
 
 a{
@@ -80,6 +81,7 @@ a{
 
 .instagram-logo{
   width: 20vw;
+  animation: logo-shake 60s linear infinite normal;
  
 }
 
@@ -115,11 +117,15 @@ width: 40vh;
   color: #fede4a;
   text-decoration: underline;
 }
-@keyframes App-logo-spin {
+@keyframes logoshake {
   from {
-    transform: rotate(0deg);
+    transform: translate(5px, 0%)
+  }25%{
+    transform: translate(-5px, 5%)
+  }50%{
+    transform: translate(-10px, 0%)
   }
   to {
-    transform: rotate(360deg);
+    transform: translate(-1px, 0%)
   }
 }
