--- a/src/App.css
+++ b/src/App.css
@@ -117,6 +117,11 @@ width: 40vh;
   color: #fede4a;
   text-decoration: underline;
 }
+
+.footer{
+  background-color: #282c34;
+  height: 20px;
+}
 @keyframes logoshake {
   from {
     transform: translate(5px, 0%)
