--- a/src/App.css
+++ b/src/App.css
@@ -119,7 +119,7 @@ width: 40vh;
 }
 
 .footer{
-  background-color: #282c34;
+  background-color: black;
   height: 20px;
 }
 @keyframes logoshake {
