--- a/src/App.css
+++ b/src/App.css
@@ -33,6 +33,7 @@ text-decoration: underline;
   background-color: black; 
   height: 100vh;
 
+
 }
 
 .homepage-component{
@@ -123,16 +124,39 @@ width: 40vh;
   height: 20px;
 }
 
+.upcoming{
+  display: flex;
+  flex-direction: column;
+
+  align-items: center;
+}
+
 .circuit-container{
   background-color: black;
-  
+  height: 200px;
+  width: 200px;
+  margin-top: 200px;
+  margin-left: 50px;
+  border: 3px white solid;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+
 }
 
 .circuit{
   border: white solid 3px;
+
+  height: 100px;
+  width: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .circuit-propellor{
+  height: 150px;
+  width:30px;
   background-color: black;
   animation: circuitflow 60s linear infinite normal;
 }
@@ -157,7 +181,15 @@ width: 40vh;
 
 
 @keyframes circuitflow{
-  from{
-    
+  from {
+    transform: rotate(0deg);
+  }
+ 
+  50% { 
+        transform: rotate(1800deg); 
+      }
+
+  to {
+    transform: rotate(0);
   }
 }
